--- a/app.cabal
+++ b/app.cabal
@@ -15,18 +15,26 @@ executable app
   main-is:             Main.hs
   other-extensions:    OverloadedStrings
   other-modules:       Client.CSS
-                       Controllers.Home
+                       Platform.Home
                        Views.Home
                        Views.Utils
   build-depends:       base >=4.3.1,
-                       wai-extra >=3.0.0,
+                       wai-extra,
                        wai-middleware-static,
                        scotty,
                        clay,
                        text,
                        blaze-html,
                        blaze-markup,
-                       aeson
+                       aeson,
+                       classy-prelude,
+                       postgresql-simple,
+                       time,
+                       jose-jwt,
+                       http-types,
+                       slug >= 0.1.7,
+                       aeson,
+                       template-haskell
   default-language:    Haskell2010
 
 source-repository head
