--- a/app.cabal
+++ b/app.cabal
@@ -18,8 +18,18 @@ executable app
                        Platform.Home
                        Views.Home
                        Views.Utils
+                       Core.Item.Controller
+                       Core.Item.Types
+                       Platform.JSONUtil
+                       Core.Item.DAO
+                       Core.Item.Service
+                       Platform.Postgres
   build-depends:       base >=4.3.1,
                        wai-extra,
+                       wai-cors,
+                       wai,
+                       warp,
+                       warp-tls,
                        wai-middleware-static,
                        scotty,
                        clay,
@@ -30,11 +40,15 @@ executable app
                        classy-prelude,
                        postgresql-simple,
                        time,
-                       jose-jwt,
                        http-types,
                        slug >= 0.1.7,
                        aeson,
-                       template-haskell
+                       template-haskell,
+                       mtl,
+                       convertible,
+                       data-has,
+                       resource-pool,
+                       postgresql-simple-migration
   default-language:    Haskell2010
 
 source-repository head
