--- a/app.cabal
+++ b/app.cabal
@@ -20,7 +20,7 @@ executable app
                        Views.Utils
                        Core.Item.Controller
                        Core.Item.Types
-                       Platform.JSONUtil
+                       Platform.Types
                        Core.Item.DAO
                        Core.Item.Service
                        Platform.Postgres
@@ -48,7 +48,9 @@ executable app
                        convertible,
                        data-has,
                        resource-pool,
-                       postgresql-simple-migration
+                       postgresql-simple-migration,
+                       digestive-functors-aeson,
+                       digestive-functors
   default-language:    Haskell2010
 
 source-repository head
