--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,7 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps: [slug-0.1.7]
+extra-deps: [slug-0.1.7, digestive-functors-0.8.4.2, digestive-functors-aeson-1.1.27]
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
