--- a/app.cabal
+++ b/app.cabal
@@ -50,7 +50,8 @@ executable app
                        resource-pool,
                        postgresql-simple-migration,
                        digestive-functors-aeson,
-                       digestive-functors
+                       digestive-functors,
+                       securemem
   default-language:    Haskell2010
 
 source-repository head
