--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^4.6.0",
-    "react-bootstrap": "^1.4.3"
+    "react-bootstrap": "^1.4.3",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
     "react-router-dom": "^5.2.0"
